add bespoke solver

--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "555091bf-3b44-4003-a6e6-5d9074628277",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e513e819-96d1-401d-9da5-4598a9e97f3a",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "079a3450-9f74-4b17-a29a-e103013c10cd",
    "metadata": {},
    "outputs": [],
@@ -69,144 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ae40af8c-8106-4b3f-8800-128804243727",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>Country</th>\n",
-       "      <th>Australia</th>\n",
-       "      <th>Brazil</th>\n",
-       "      <th>Brazil_Downsample</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Year</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1960</th>\n",
-       "      <td>1.857767e+10</td>\n",
-       "      <td>1.516557e+10</td>\n",
-       "      <td>1.516557e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1961</th>\n",
-       "      <td>1.965282e+10</td>\n",
-       "      <td>1.523685e+10</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1962</th>\n",
-       "      <td>1.989249e+10</td>\n",
-       "      <td>1.992629e+10</td>\n",
-       "      <td>1.992629e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1963</th>\n",
-       "      <td>2.150745e+10</td>\n",
-       "      <td>2.302148e+10</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1964</th>\n",
-       "      <td>2.376414e+10</td>\n",
-       "      <td>2.121189e+10</td>\n",
-       "      <td>2.121189e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015</th>\n",
-       "      <td>1.351690e+12</td>\n",
-       "      <td>1.802210e+12</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016</th>\n",
-       "      <td>1.208850e+12</td>\n",
-       "      <td>1.795700e+12</td>\n",
-       "      <td>1.795700e+12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017</th>\n",
-       "      <td>1.329190e+12</td>\n",
-       "      <td>2.063510e+12</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018</th>\n",
-       "      <td>1.432880e+12</td>\n",
-       "      <td>1.916950e+12</td>\n",
-       "      <td>1.916950e+12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019</th>\n",
-       "      <td>1.396570e+12</td>\n",
-       "      <td>1.877810e+12</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>60 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Country     Australia        Brazil  Brazil_Downsample\n",
-       "Year                                                  \n",
-       "1960     1.857767e+10  1.516557e+10       1.516557e+10\n",
-       "1961     1.965282e+10  1.523685e+10                NaN\n",
-       "1962     1.989249e+10  1.992629e+10       1.992629e+10\n",
-       "1963     2.150745e+10  2.302148e+10                NaN\n",
-       "1964     2.376414e+10  2.121189e+10       2.121189e+10\n",
-       "...               ...           ...                ...\n",
-       "2015     1.351690e+12  1.802210e+12                NaN\n",
-       "2016     1.208850e+12  1.795700e+12       1.795700e+12\n",
-       "2017     1.329190e+12  2.063510e+12                NaN\n",
-       "2018     1.432880e+12  1.916950e+12       1.916950e+12\n",
-       "2019     1.396570e+12  1.877810e+12                NaN\n",
-       "\n",
-       "[60 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "0c5e2551-653c-45f5-8a2a-6654308fca47",
    "metadata": {},
    "outputs": [
@@ -216,7 +79,7 @@
        "0.9848187875734282"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "22972ac3-19b1-4556-b7b5-48e8f7fc890b",
    "metadata": {},
    "outputs": [
@@ -244,7 +107,7 @@
        "0.9909516029131236"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "b05cb642-d1a1-4dc4-b988-4e1872036a06",
    "metadata": {},
    "outputs": [
@@ -293,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "81958330-1c6f-4879-b50d-c7307783ebac",
    "metadata": {},
    "outputs": [],
@@ -303,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "e1485209-2a4e-4ff7-b558-33e2a7d34628",
    "metadata": {},
    "outputs": [],
@@ -316,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "ec1920e7-7962-4d79-a8a9-f0226cdd1eab",
    "metadata": {},
    "outputs": [
@@ -482,7 +345,7 @@
        "[60 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,12 +367,15 @@
     "- linear_constraint: None default is average | otherwise array like of weights -- check size error \n",
     "- quadratic_constraint_weight: weight on regularization term (non negative)\n",
     "\n",
-    "> Remember no side effects\n"
+    "> Remember no side effects\n",
+    "\n",
+    "Allow for bespoke solver (e.g. additive Denton) \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "f79fe19e-059a-4312-9505-14c6d09f238a",
    "metadata": {},
    "outputs": [],
@@ -533,9 +399,10 @@
    "outputs": [],
    "source": [
     "class Estimator(TransformerMixin, BaseEstimator):\n",
-    "    def __init__(self, linear_constraint: Optional[ArrayLike] = None, quadratic_constraint_weight: Optional[Union[float,int]] = None):\n",
+    "    def __init__(self, linear_constraint: Optional[ArrayLike] = None, quadratic_constraint_weight: Optional[Union[float,int]] = None, solver = Optional[Callable] = None):\n",
     "        self.linear_constraint = linear_constraint\n",
     "        self.quadratic_constraint_weight = quadratic_constraint_weight\n",
+    "        self.solver = solver\n",
     "         \n",
     "    def fit(self, high_frequency_data: ArrayLike, low_frequency_data: ArrayLike, annotation_data: Optional[ArrayLike] = None):\n",
     "        self.high_frequency_data = high_frequency_data\n",
@@ -543,7 +410,11 @@
     "        self.annotation_data = annotation_data\n",
     "        \n",
     "        self._validate()\n",
-    "        self.interpolant = self._solve() \n",
+    "        \n",
+    "        if self.solver is None:\n",
+    "            self.interpolant = self._solver() \n",
+    "        else:\n",
+    "            self.interpolant = self.solve(self.high_frequency_data, self.low_frequency_data, self.annotation_data, self.linear_constraint, self.quadratic_constraint_weight) \n",
     "        \n",
     "        return self\n",
     "\n",
@@ -573,7 +444,7 @@
     "        \n",
     "        return self\n",
     "    \n",
-    "    def get_params(self, deep = False):\n",
+    "    def get_params(self, deep = True):\n",
     "        return {'linear_constraint': self.linear_constraint, \n",
     "                'quadratic_constraint_weight': self.quadratic_constraint_weight,\n",
     "                'projection': self.projection if sklearn_validation.check_is_fitted(self, 'projection') else None}\n",
@@ -654,7 +525,7 @@
     "        # quadratic_constraint \n",
     "        sklearn_validation.check_scalar(self.quadratic_constraint_weight, \"quadratic_constraint_weight\", (float, int), min_val = 0)\n",
     "\n",
-    "    def _solve(self) -> ArrayLike:\n",
+    "    def _solver(self) -> ArrayLike:\n",
     "        m = len(self.low_frequency_data)\n",
     "        k = self.frequency\n",
     "        n = len(self.high_frequency_data)\n",
@@ -691,28 +562,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8ce573a-0896-4735-8b3a-2f4a5bb6caf0",
+   "id": "778d3011-ff0a-4f20-b66d-f8c928e0ae3d",
    "metadata": {},
    "source": [
-    "#### Second Experiment with Annotations \n",
+    "#### Test\n",
     "\n",
-    "#### Check Compatible with np when weight 0\n",
-    "\n",
-    "#### Exhibit grid search "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0c8e71e3-a8ab-4dd8-98da-6b6406ccc4cb",
-   "metadata": {},
-   "source": [
-    "#### Test"
+    "Compatibility with `statsmodels`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b9558a6-74ee-432f-8ad9-4e1dd737c097",
+   "id": "3d3352bf-b296-4682-a085-796bf84d2681",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,6 +595,22 @@
     "                105.97568,147.50144,89.958987,40.547201,74.445963,\n",
     "                108.34473,76.66211,42.763347,94.14664,153.41596,\n",
     "                109.67405,58.290761,122.62556,190.41409,128.66959])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d78e6892-d246-4213-aca3-b3d86f2dfbaf",
+   "metadata": {},
+   "source": [
+    "#### Second Experiment with Annotations "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6944ac1d-4fc0-4c92-92d2-a47957f8a05e",
+   "metadata": {},
+   "source": [
+    "#### Exhibit grid search CV"
    ]
   }
  ],
