checkpoint before fixing annotation derivative

--- a/code.ipynb
+++ b/code.ipynb
@@ -369,8 +369,7 @@
     "\n",
     "> Remember no side effects\n",
     "\n",
-    "Allow for bespoke solver (e.g. additive Denton) \n",
-    "\n"
+    "Allow for bespoke solver (e.g. additive Denton) \n"
    ]
   },
   {
@@ -398,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Estimator(TransformerMixin, BaseEstimator):\n",
+    "class Estimator(BaseEstimator, TransformerMixin):\n",
     "    def __init__(self, linear_constraint: Optional[ArrayLike] = None, quadratic_constraint_weight: Optional[Union[float,int]] = None, solver = Optional[Callable] = None):\n",
     "        self.linear_constraint = linear_constraint\n",
     "        self.quadratic_constraint_weight = quadratic_constraint_weight\n",
@@ -430,6 +429,7 @@
     "        return self.interpolant\n",
     "    \n",
     "    def score():\n",
+    "        sklearn_validation.check_is_fitted(self, 'interpolant')\n",
     "        model = CCA(n_components=1)\n",
     "        X_c, Y_c = model.fit_transform(self.interpolant, self.low_frequency_data)\n",
     "        return np.corrcoef(np.squeeze(X_c), np.squeeze(Y_c))[0,1]\n",
@@ -523,39 +523,40 @@
     "        assert len(linear_constraint) == self.frequency, \"length of linear constraint must equal length of high frequency data divided by length of low frequency data\"\n",
     "\n",
     "        # quadratic_constraint \n",
-    "        sklearn_validation.check_scalar(self.quadratic_constraint_weight, \"quadratic_constraint_weight\", (float, int), min_val = 0)\n",
+    "        if self.quadratic_constraint_weight is not None:\n",
+    "            sklearn_validation.check_scalar(self.quadratic_constraint_weight, \"quadratic_constraint_weight\", (float, int), min_val = 0)\n",
     "\n",
     "    def _solver(self) -> ArrayLike:\n",
-    "        m = len(self.low_frequency_data)\n",
+    "        t = len(self.low_frequency_data)\n",
     "        k = self.frequency\n",
-    "        n = len(self.high_frequency_data)\n",
+    "        T = len(self.high_frequency_data)\n",
     "\n",
-    "        constraints_matrix = np.kron(np.eye(m), self.linear_constraint.reshape(-1,1))\n",
+    "        constraints_matrix = np.kron(np.eye(t), self.linear_constraint.reshape(-1,1))\n",
     "\n",
     "        inverse_high_frequency_data_matrix = np.diag(1.0 / self.high_frequency_data)\n",
-    "        cost_derivative_matrix = np.eye(n)\n",
+    "        cost_derivative_matrix = np.eye(T)\n",
     "\n",
-    "        diag_idx0, diag_idx1 = np.diag_indices(n)\n",
+    "        diag_idx0, diag_idx1 = np.diag_indices(T)\n",
     "        cost_derivative_matrix[diag_idx0[1:-1], diag_idx1[1:-1]] += 1\n",
     "        cost_derivative_matrix[diag_idx0[:-1]+1, diag_idx1[:-1]] = -1\n",
     "        cost_derivative_matrix[diag_idx0[:-1], diag_idx1[:-1]+1] = -1\n",
     "\n",
     "        cost_matrix = 2 * np.dot(np.dot(inverse_high_frequency_data_matrix, cost_derivative_matrix), inverse_high_frequency_data_matrix)\n",
     "\n",
-    "        annotation_matrix = np.zeros(n)\n",
+    "        annotation_matrix = np.zeros(T)\n",
     "        annotation_matrix[diag_idx0, diag_idx1] = np.nan_to_num(self.high_frequency_data - self.annotation_data)\n",
     "        annotation_matrix = 2 * self.quadratic_constraint_weight * annotation_matrix\n",
     "\n",
-    "        matrix = np.zeros((n+m, n+m))  \n",
-    "        matrix[:n,:n] = cost_matrix\n",
-    "        matrix[:n,n:] = constraints_matrix\n",
-    "        matrix[n:,:n] = constraints_matrix.T\n",
+    "        matrix = np.zeros((T+t, T+t))  \n",
+    "        matrix[:T,:T] = cost_matrix\n",
+    "        matrix[:T,T:] = constraints_matrix\n",
+    "        matrix[T:,:T] = constraints_matrix.T\n",
     "\n",
-    "        values = np.zeros((m+n,1)) \n",
-    "        values[-m:] = self.low_frequency_data \n",
+    "        values = np.zeros((t+T,1)) \n",
+    "        values[-t:] = self.low_frequency_data \n",
     "\n",
     "        X = np.linalg.solve(matrix, values)\n",
-    "        X = X[:-m] \n",
+    "        X = X[:-t] \n",
     "\n",
     "        return X.squeeze()"
    ]
@@ -607,10 +608,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df75a441-02be-47e3-8e9b-73a65b3a39b9",
+   "metadata": {},
+   "source": [
+    "#### Different Solver (Additive Denton -- exact or approximate)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6944ac1d-4fc0-4c92-92d2-a47957f8a05e",
    "metadata": {},
    "source": [
-    "#### Exhibit grid search CV"
+    "#### Exhibit grid search CV over linear constraint with score (no annotations) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bd7e261b-54a7-438c-ab53-69cebc26e04f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = np.arange(10)\n",
+    "blah = np.arange(10.)\n",
+    "blah[::2] = np.NaN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c6f2a4a1-2b55-4c78-96ca-1e93c3691028",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tt = np.zeros(blah.shape)\n",
+    "\n",
+    "tt[~np.isnan(blah)] = 1\n",
+    "\n",
+    "np.diag(tt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "10a5c49f-cf4d-4f74-a2fa-ddc3b722c1f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan,  1., nan,  3., nan,  5., nan,  7., nan,  9.])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blah"
    ]
   }
  ],
