delete custom set_params and get_params
inherited from BaseEstimator

--- a/code.ipynb
+++ b/code.ipynb
@@ -392,13 +392,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "f669ae32-59d6-4a95-8b9c-6bef566454c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Estimator(BaseEstimator, TransformerMixin):\n",
-    "    def __init__(self, linear_constraint: Optional[ArrayLike] = None, quadratic_constraint_weight: Optional[Union[float,int]] = None, solver = Optional[Callable] = None):\n",
+    "    def __init__(self, linear_constraint: Optional[ArrayLike] = None, quadratic_constraint_weight: Optional[Union[float,int]] = None, solver: Optional[Callable] = None):\n",
     "        self.linear_constraint = linear_constraint\n",
     "        self.quadratic_constraint_weight = quadratic_constraint_weight\n",
     "        self.solver = solver\n",
@@ -434,20 +434,20 @@
     "        X_c, Y_c = model.fit_transform(self.interpolant, self.low_frequency_data)\n",
     "        return np.corrcoef(np.squeeze(X_c), np.squeeze(Y_c))[0,1]\n",
     "        \n",
-    "    def set_params(self, **params):\n",
-    "        if params:\n",
-    "            for key, value in params.items():\n",
-    "                if hasattr(self, key):\n",
-    "                    setattr(self, key, value)\n",
-    "                else:\n",
-    "                    self.kwargs[key] = value\n",
+    "#     def set_params(self, **params):\n",
+    "#         if params:\n",
+    "#             for key, value in params.items():\n",
+    "#                 if hasattr(self, key):\n",
+    "#                     setattr(self, key, value)\n",
+    "#                 else:\n",
+    "#                     self.kwargs[key] = value\n",
     "        \n",
-    "        return self\n",
+    "#         return self\n",
     "    \n",
-    "    def get_params(self, deep = True):\n",
-    "        return {'linear_constraint': self.linear_constraint, \n",
-    "                'quadratic_constraint_weight': self.quadratic_constraint_weight,\n",
-    "                'projection': self.projection if sklearn_validation.check_is_fitted(self, 'projection') else None}\n",
+    "#     def get_params(self, deep = True):\n",
+    "#         return {'linear_constraint': self.linear_constraint, \n",
+    "#                 'quadratic_constraint_weight': self.quadratic_constraint_weight,\n",
+    "#                 'projection': self.projection if sklearn_validation.check_is_fitted(self, 'projection') else None}\n",
     "\n",
     "    def _validate(self):\n",
     "        # high_frequency_data and low_frequency_data\n",
@@ -489,6 +489,7 @@
     "        # annotations \n",
     "        if self.annotation_data is None:\n",
     "            self.annotation_data = np.full(self.high_frequency_data.shape, np.NaN)\n",
+    "            self.quadratic_constraint_weight = 0\n",
     "        else:\n",
     "            assert self.quadratic_constraint_weight is not None, \"specify a value of the hyperparameter `quadradtic_constraint_weight`\" \n",
     "\n",
@@ -520,7 +521,7 @@
     "\n",
     "        self.linear_constraint = np.asarray(self.linear_constraint)\n",
     "\n",
-    "        assert len(linear_constraint) == self.frequency, \"length of linear constraint must equal length of high frequency data divided by length of low frequency data\"\n",
+    "        assert len(self.linear_constraint) == self.frequency, \"length of linear constraint must equal length of high frequency data divided by length of low frequency data\"\n",
     "\n",
     "        # quadratic_constraint \n",
     "        if self.quadratic_constraint_weight is not None:\n",
@@ -543,17 +544,19 @@
     "\n",
     "        cost_matrix = 2 * np.dot(np.dot(inverse_high_frequency_data_matrix, cost_derivative_matrix), inverse_high_frequency_data_matrix)\n",
     "\n",
-    "        annotation_matrix = np.zeros(T)\n",
-    "        annotation_matrix[diag_idx0, diag_idx1] = np.nan_to_num(self.high_frequency_data - self.annotation_data)\n",
+    "        annotation_matrix = np.zeros(self.annotation_data.shape)\n",
+    "        annotation_matrix[~np.isnan(self.annotation_data)] = 1\n",
+    "        annotation_matrix = np.diag(annotation_matrix)\n",
     "        annotation_matrix = 2 * self.quadratic_constraint_weight * annotation_matrix\n",
     "\n",
     "        matrix = np.zeros((T+t, T+t))  \n",
-    "        matrix[:T,:T] = cost_matrix\n",
+    "        matrix[:T,:T] = cost_matrix + annotation_matrix\n",
     "        matrix[:T,T:] = constraints_matrix\n",
     "        matrix[T:,:T] = constraints_matrix.T\n",
     "\n",
     "        values = np.zeros((t+T,1)) \n",
-    "        values[-t:] = self.low_frequency_data \n",
+    "        values[:T] = 2 * self.quadratic_constraint_weight * np.nan_to_num(self.annotation_data).reshape(-1,1)\n",
+    "        values[-t:] = self.low_frequency_data.reshape(-1,1) \n",
     "\n",
     "        X = np.linalg.solve(matrix, values)\n",
     "        X = X[:-t] \n",
@@ -603,6 +606,146 @@
    "id": "d78e6892-d246-4213-aca3-b3d86f2dfbaf",
    "metadata": {},
    "source": [
+    "#### Consistency Check no Annotations "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "25881ce9-fcf9-4a4e-830e-f20cd7e65488",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=0)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#average \n",
+    "\n",
+    "estimator = Estimator()\n",
+    "estimator.fit(high_frequency_data, low_frequency_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2feeb2d6-52b0-4fe8-910a-d867181ed95e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upsampled = estimator.predict()\n",
+    "data[\"Brazil_Upsample\"].values - upsampled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "9f751245-5354-403b-919a-900ef6c33b4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__setstate__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_check_n_features',\n",
+       " '_get_param_names',\n",
+       " '_get_tags',\n",
+       " '_more_tags',\n",
+       " '_repr_html_',\n",
+       " '_repr_html_inner',\n",
+       " '_repr_mimebundle_',\n",
+       " '_solver',\n",
+       " '_validate',\n",
+       " '_validate_data',\n",
+       " 'annotation_data',\n",
+       " 'fit',\n",
+       " 'fit_transform',\n",
+       " 'frequency',\n",
+       " 'get_params',\n",
+       " 'high_frequency_data',\n",
+       " 'interpolant',\n",
+       " 'linear_constraint',\n",
+       " 'low_frequency_data',\n",
+       " 'predict',\n",
+       " 'quadratic_constraint_weight',\n",
+       " 'score',\n",
+       " 'set_params',\n",
+       " 'solver',\n",
+       " 'transform']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(estimator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40003efd-b105-4a5a-9892-ec247f1e412e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sum\n",
+    "\n",
+    "estimator = Estimator("
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c49de03-2cdc-4790-aeea-fea60c3d4e9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparam 0 \n",
+    "\n",
+    "estimator = Estimator("
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99cb49e4-f235-4c93-81a3-6f6f542417cc",
+   "metadata": {},
+   "source": [
     "#### Second Experiment with Annotations "
    ]
   },
@@ -611,7 +754,7 @@
    "id": "df75a441-02be-47e3-8e9b-73a65b3a39b9",
    "metadata": {},
    "source": [
-    "#### Different Solver (Additive Denton -- exact or approximate)  "
+    "#### Different Solver (Additive Denton -- exact)  "
    ]
   },
   {
@@ -650,23 +793,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "10a5c49f-cf4d-4f74-a2fa-ddc3b722c1f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([nan,  1., nan,  3., nan,  5., nan,  7., nan,  9.])"
+       "array([0., 1., 0., 3., 0., 5., 0., 7., 0., 9.])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "blah"
+    "np.nan_to_num(blah)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b7812cd0-84a1-4e8c-a643-018232ae8c01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sklearn_validation.check_scalar(0, \"quadratic_constraint_weight\", (float, int), min_val = 0)"
    ]
   }
  ],
