fix custom solver

--- a/code.ipynb
+++ b/code.ipynb
@@ -15,13 +15,10 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import statsmodels.tsa.interp\n",
-    "# import scipy.optimize\n",
     "\n",
     "from sklearn.cross_decomposition import CCA\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "import sklearn.utils.validation as sklearn_validation\n",
-    "\n",
-    "# import copy\n",
     "\n",
     "np.set_printoptions(precision = 4)\n",
     "pd.set_option(\"display.max_rows\", 15)\n",
@@ -197,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 243,
    "id": "f669ae32-59d6-4a95-8b9c-6bef566454c3",
    "metadata": {},
    "outputs": [],
@@ -218,7 +215,7 @@
     "        if self.solver is None:\n",
     "            self.interpolant = self._solver() \n",
     "        else:\n",
-    "            self.interpolant = self.solve(self.high_frequency_data, self.low_frequency_data, self.annotation_data, self.linear_constraint, self.quadratic_constraint_weight) \n",
+    "            self.interpolant = self.solver(self.high_frequency_data, self.low_frequency_data, self.annotation_data, self.linear_constraint, self.quadratic_constraint_weight) \n",
     "        \n",
     "        return self\n",
     "\n",
@@ -1000,7 +997,155 @@
    "id": "df75a441-02be-47e3-8e9b-73a65b3a39b9",
    "metadata": {},
    "source": [
-    "#### Different Solver (Additive Denton -- exact)  "
+    "#### Different Solver (approximate possible)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "id": "afbac759-9cd0-480a-80a8-9eb843897428",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solver(high_frequency_data: ArrayLike, \n",
+    "           low_frequency_data: ArrayLike, \n",
+    "           annotation_data: ArrayLike, \n",
+    "           linear_constraint: ArrayLike, \n",
+    "           quadratic_constraint_weight: Union[float,int]) -> ArrayLike:\n",
+    "\n",
+    "    t = len(low_frequency_data)\n",
+    "    T = len(high_frequency_data)\n",
+    "    k = T // t\n",
+    "\n",
+    "    constraints_matrix = np.kron(np.eye(t), linear_constraint.reshape(-1,1))\n",
+    "\n",
+    "    cost_derivative_matrix = np.eye(T)\n",
+    "    diag_idx0, diag_idx1 = np.diag_indices(T)\n",
+    "    cost_derivative_matrix[diag_idx0[1:-1], diag_idx1[1:-1]] += 1\n",
+    "    cost_derivative_matrix[diag_idx0[:-1]+1, diag_idx1[:-1]] = -1\n",
+    "    cost_derivative_matrix[diag_idx0[:-1], diag_idx1[:-1]+1] = -1\n",
+    "\n",
+    "    cost_matrix = 2 * cost_derivative_matrix\n",
+    "\n",
+    "    annotation_matrix = np.zeros(annotation_data.shape)\n",
+    "    annotation_matrix[~np.isnan(annotation_data)] = 1\n",
+    "    annotation_matrix = np.diag(annotation_matrix)\n",
+    "    annotation_matrix = 2 * quadratic_constraint_weight * annotation_matrix\n",
+    "\n",
+    "    matrix = np.zeros((T+t, T+t))  \n",
+    "    matrix[:T,:T] = cost_matrix + annotation_matrix\n",
+    "    matrix[:T,T:] = constraints_matrix\n",
+    "    matrix[T:,:T] = constraints_matrix.T\n",
+    "\n",
+    "    values = np.zeros((t+T,1)) \n",
+    "    values[:T] = (np.hstack([0, np.diff(high_frequency_data)]) - np.hstack([np.diff(high_frequency_data), 0])).reshape(-1,1)\n",
+    "    values[:T] += 2 * quadratic_constraint_weight * np.nan_to_num(annotation_data).reshape(-1,1)\n",
+    "    values[-t:] = low_frequency_data.reshape(-1,1) \n",
+    "\n",
+    "    X = np.linalg.solve(matrix, values)\n",
+    "    X = X[:-t] \n",
+    "\n",
+    "    return X.squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "id": "3451b131-a3c3-40e9-a00d-4d8ec2952532",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input data \n",
+    "\n",
+    "high_frequency_data = data[\"Australia\"].values\n",
+    "low_frequency_data = data[\"Brazil_Downsample\"].dropna().values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "id": "11ab236a-d42b-45b8-a2fb-ae0918b58c8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=0,\n",
+       "          solver=<function solver at 0x000001E87725F798>)"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimator = Estimator(solver=solver)\n",
+    "estimator.fit(high_frequency_data, low_frequency_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "id": "f82d12a1-68e0-4e02-8d37-c585a70eb074",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "upsampled_additive = estimator.predict()\n",
+    "estimator.score()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "id": "8145e4e4-a6f0-4667-b26a-6c1c4a861e6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55456158173.50534"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average(np.abs(data[\"Brazil\"].values - upsampled))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "id": "e083e03a-912e-441b-93b6-845d06074c71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58648786695.14173"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average(np.abs(data[\"Brazil\"].values - upsampled_additive))"
    ]
   },
   {
@@ -1020,6 +1165,47 @@
    "source": [
     "Linear constraint"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "b0e9b9bb-775e-4a1d-803c-2d1a784a4f48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = np.arange(10)\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "3e9aaac3-6e53-48ee-8205-534da802d6de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1,  0,  0,  0,  0,  0,  0,  0,  0,  1])"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
